# mm-optimization

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: Matrix.cpp  Matrix.h  Matrix1D.cpp  Matrix1D.h
utils/: MatrixOps.cpp  MatrixOps.h  MiscOps.cpp  MiscOps.h  OptimizedMatrixOps.cpp  OptimizedMatrixOps.h
version1/: version1.cpp  version1.h
version2/: version2.cpp  version2.h
version3/: version3.cpp  version3.h
